# v6emul

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  PLAN_unit_test_suite_2026-03-31.md  README.md  design.md  plan.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  main.cpp  server_mode.cpp  server_mode.h  test_mode.cpp  test_mode.h  version.h.in
crates/v6cli/: Cargo.toml
crates/v6cli/src/: main.rs
crates/v6core/: Cargo.toml
crates/v6core/src/: memory.rs
crates/v6ipc/: Cargo.toml
crates/v6ipc/src/: lib.rs
design/: plan.md
docs/: README.md  building.md  cli.md  ipc-protocol.md  test-client.md
libs/v6core/: CMakeLists.txt
libs/v6core/include/core/: audio.h  breakpoints.h  cpu_i8080.h  debugger.h  disasm.h  display.h  hardware.h  hardware_consts.h  io.h  keyboard.h  memory.h  sound_ay8910.h  trace_log.h
libs/v6core/src/: audio.cpp  breakpoint.cpp  breakpoints.cpp  cpu_i8080.cpp  debug_data.cpp  debugger.cpp  disasm.cpp  display.cpp  hardware.cpp  io.cpp  keyboard.cpp  memory.cpp  recorder.cpp  trace_log.cpp
libs/v6ipc/: CMakeLists.txt
libs/v6ipc/include/ipc/: commands.h  protocol.h  transport.h
libs/v6ipc/src/: commands.cpp  protocol.cpp  transport.cpp
libs/v6utils/: CMakeLists.txt
libs/v6utils/include/utils/: args_parser.h  json_utils.h  utils.h
libs/v6utils/src/: args_parser.cpp  utils.cpp
tests/: CMakeLists.txt  cpu_tests.cpp  determinism_tests.cpp  e2e_tests.cpp  integration_tests.cpp  ipc_tests.cpp  memory_tests.cpp  run_golden.cmake  run_unit_tests.py
tests/golden/: test_arith.expected  test_boot_rom.expected  test_port.expected
tests/tools/v6asm/docs/: symbols.md
tests/unit_tests/: adc_carry.asm  add_b.asm  add_carry.asm  ana_b.asm  call_ret.asm  cma.asm  cmc.asm  cmp_b.asm  dad_b.asm  dcr_b.asm  dcx_h.asm  expected.json  inr_b.asm  inx_h.asm  jmp.asm  jnz.asm  jz_not_taken.asm  lda.asm  lxi_h.asm  mov_a_b.asm  mov_m_r.asm  mvi_a.asm  ora_b.asm  push_pop.asm  rlc.asm  rrc.asm  sbb_carry.asm  sta.asm  stc.asm  sub_b.asm  sub_zero.asm  xra_a.asm  xra_b.asm
tools/test_client/: CMakeLists.txt  keyboard.h  main.cpp  net.cpp  net.h  window.cpp  window.h  worker.cpp  worker.h
tools/v6asm/: README.md
tools/v6asm/docs/: README.md  assembler.md  cli.md
